Fix quote alignment

--- a/css/main.css
+++ b/css/main.css
@@ -199,7 +199,7 @@
     color: #fefefe;
     font-family: 'Droid Sans Mono', monospace;
     font-size: 1.3rem;
-    margin-top: 20rem;
+    margin-top: 18rem;
   }
 
   .site-header {
